2007-03-31  Dmitry Kim <dmitry.kim@gmail.com>

	* HttpUtil: major rework. get_response() method now respects
	caching (can be turned off via options) and supports different HTTP
	methods (GET (default), HEAD and POST) and ranged requests. get() and
	head() methods are now just a thin wrappers around get_request().
	Semantics for user-supplied &block has been made consistent across
	these methods.
	* HttpUtil: get_cached() method has been removed (obsoleted by new
	get()). post() method has been added. get_partial() method for ranged
	requests has been added. Net::HTTPResponse partial_body() method has
	been removed (mostly because it won't play well with future HTTP
	encodings support), please use get_partial() or get_request() instead.
	* Utils: http_get() method has been removed (long obsoleted by
        HttpUtil)
	* different plugins: modified to accomodate for HttpUtil changes.

2007-03-24  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* HttpUtil: new get_response method to follow redirects and get an
	Net::HTTPResponse object with an open connection, allowing partial
	body retrieval.
	* HttpUtil: extend Net::HTTPResponse with a #partial_body() method. The
	method take an argument (max bytes to download) and an optional block;
	the method yields all the partial content that it's being downloaded,
	instead of the single chunks yield by #read_body().
	* url plugin: use the new HttpUtil methods.
	* url plugin: do not block while trying to get link info.

2007-03-14  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Socket filtering: socket data, both input and output, can now be
	filtered. This is used for example to transcode all input and output
	so that messages are internally managed as UTF-8. By default, the bot
	will try cp1252 (Windows Western European) encoding for non-UTF-8
	strings. Thanks to jsn (Dmitry Kim <dmitry.kim@gmail.com>).

2007-03-10  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>
